Mon May 16 23:02:13 CEST 2005 (tk)
----------------------------------
  * freshclam/manager.c: remove superfluous close(hostfd), thanks to Pavel V.
			 Rochnyack <rpv*fsf.tsu.ru>

Mon May 16 02:51:03 CEST 2005 (tk)
----------------------------------
  * configure.in: detect and define SENDMAIL_VERSION

Sun May 15 16:47:48 BST 2005 (njh)
----------------------------------
  * libclamav/message.c:	Fixed a problem where an email with more
					than one content-disposition type line,
					one or more of which was empty, could
					crash libclamav. Reported by Daniel
					Theodoro <dtheodoro at ig.com.br>

Sat May 14 17:14:52 BST 2005 (njh)
----------------------------------
  * libclamav/pdf.c:	Fix problem with munmap not unmapping all the area,
				thanks to Martin Blapp <mb at imp.ch> for
				pointing this out

Thu May 12 09:23:52 BST 2005 (trog)
-----------------------------------
  * libclamav/speical.c: Fix reading PString type in Photoshop thumbnails.

Thu May 12 08:32:22 BST 2005 (njh)
----------------------------------
  * clamav-milter:	Open /dev/console (if LogFile not set) before
				dropping priv so that error messages aren't
				lost reported by David Crow.

Wed May 11 18:02:24 CEST 2005 (tk)
----------------------------------
  * libclamav/others: increase f-level

Wed May 11 03:29:50 CEST 2005 (tk)
----------------------------------
  * freshclam/manager.c: fix socket descriptor leak in --no-dns mode (patch by
			 GertJan Spoelman <cav*gjs.cc>)

Wed May 11 02:44:41 CEST 2005 (tk)
----------------------------------
  * clamscan, freshclam: return with 62 (instead of 1) when logger can't be
			 initialized

Tue May 10 21:29:45 CEST 2005 (tk)
----------------------------------
  * libclamav/matcher-ac.c, libclamav/matcher-bm.c: fix detection problem with
						    *.ndb OLE2 signatures
						    (problem reported by Trog)

Tue May 10 04:47:28 CEST 2005 (tk)
----------------------------------